<resources>
    <string name="app_name">RAALEAT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="raaleat">RAALEAT</string>
    <string name="signin">SIGN IN</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpass">Forget Password ?</string>
    <string name="createaccount">Create An Account</string>
    <string name="fullname">Full Name</string>
    <string name="phone">Mobile Number</string>
    <string name="location">Location</string>
    <string name="internet">Turn on Internet</string>
    <string name="invalidemail">Invalid Email Or password</string>
    <string name="insertemail">please insert Mail</string>
    <string name="insertpassword">please insert Password</string>
    <string name="insertfirstname">please insert Full Name</string>
    <string name="insertphone">please insert Phone</string>
    <string name="Successfull">Registered Successfully</string>
    <string name="emailfailed">Email is Used</string>
    <string name="facebook_app_id">588552121560489</string>
    <string name="firstname">Full Name</string>
    <string name="Phone">Mobile Number</string>
    <string name="searchnow">Search Now</string>
    <string name="seafood">Sea Food</string>
    <string name="address">Address</string>
    <string name="welcome">Welcome In Raaleat</string>
    <string name="orderfood">Order Your Food Now</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="notifications">Notifications</string>
    <string name="myorders">My Orders</string>
    <string name="wallet">Wallet</string>
    <string name="setting">Setting</string>
    <string name="aboutapp">About App</string>
    <string name="selectcity">Select City</string>
    <string name="selectstate">Select State</string>
    <string name="selecttype">Select Type Food</string>
    <string name="addtocart">Add To Cart</string>
    <string name="addsucces">The Cart has been successfully added</string>
    <string name="updatedcart">The Cart has been Updated successfully</string>
    <string name="quantity">Quantity</string>
    <string name="nomeals">No Meals In Your Cart</string>
    <string name="totalprice">Total Price</string>
    <string name="checkout">Check Out</string>
    <string name="city">City</string>
    <string name="getlocation">Get My Location</string>
    <string name="debit">Debit/Credit Card</string>
    <string name="cash">Cash</string>
    <string name="oder">Order</string>
    <string name="accountinfo">Account Info</string>
    <string name="changepass">Change password</string>
    <string name="language">Language</string>
    <string name="logout">Log out</string>
    <string name="save">Save</string>
    <string name="confirmpass">ConFirm password</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="insertAddress">Please Insert Address</string>
    <string name="profileupdated">User Info Updated Success</string>

    <string name="insertoldpas">Insert Old Password</string>
    <string name="insertnewpas">Insert New password</string>
    <string name="passwordupdated">Password Updated Succesfully</string>
    <string name="wrongpass">Please Enter old password correct </string>
    <string name="confirmchangepassword">Confirm Change Password...</string>
    <string name="askforchange">Are you sure you want Change Your Password ?</string>
    <string name="yes">Accept</string>
    <string name="no">Refuse</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="filterby">Filter By</string>
    <string name="recomened">Recommended</string>
    <string name="rating">Rating</string>
    <string name="atoz">A To Z</string>
    <string name="minorder">Min Order Amount</string>
    <string name="raleetocin">RAALEAT COINS</string>
    <string name="welcomeinwallet">Welcome to raal eco share system</string>
    <string name="savemoney">Save Money With RAALEAT Wallet</string>
    <string name="addmoney">Add Money In Wallet</string>
    <string name="payforrestaurant">Pay For Raaleat Restaurant</string>
    <string name="chooseyourpackge">Choose your package</string>
    <string name="coins">COINS</string>
    <string name="sar">SAR</string>
    <string name="youcanpay">You Can Pay For The Restaurant of Our App </string>
    <string name="amountofprice">Please Enter Amount</string>
    <string name="enteryouremail">Enter your Friend Email</string>
    <string name="share">Sharing Pay</string>
    <string name="pay">Pay</string>
    <string name="mycart">Cart</string>
    <string name="signup">Sign Up</string>
    <string name="minpas">password min 8 char</string>
    <string name="notmatch">Password Not Match ConFirm Password</string>
    <string name="confirrmpas">ConFirm Passsword</string>
    <string name="datefrom">From</string>
    <string name="dateto">To</string>
    <string name="order">Order</string>
    <string name="thanksfororder">Thank For Your Order</string>
    <string name="finish">Finish</string>
    <string name="orderid">Order Id</string>
    <string name="noresultfound">No Result Found</string>
    <string name="newcoins">New Coins</string>
    <string name="acceptshare">Accept Share</string>
    <string name="paywithraaleat">Pay With Raaleat</string>
    <string name="sharewithfriend">Group Share</string>
    <string name="minute">Minute</string>
    <string name="amount">Price</string>
    <string name="amountDelivery">Delivery price</string>
    <string name="status">Statues</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="totalPrice">Total Price</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="selectrestaurant">Select Restaurant</string>
    <string name="paymentsuccess">Payment successful</string>
    <string name="pricebiggerthanyourwallet">The Total price is Bigger than The Money in Your Wallet</string>
    <string name="buy">Buy</string>
    <string name="explore">EXPLORE</string>
    <string name="findbestrestaurant">Find best Restaurant And best Food</string>
    <string name="fastdelivery">FAST DELIVERY</string>
    <string name="youwilldelivery">You Will deliver your fast food</string>
    <string name="payindoor">You Will Pay In door</string>
    <string name="payit">PAY IT</string>
    <string name="skip">Skip</string>
    <string name="norate">No Rating</string>
    <string name="statues">Statues</string>
    <string name="details">Details</string>
    <string name="nooffers">Sorry No Offers Available Now</string>
    <string name="nearestrestaurants">Nearest Restaurants</string>
    <string name="findrestaurants">FIND RESTAURANTS</string>
    <string name="name">Name</string>
    <string name="money">Money</string>
    <string name="accept">Accept</string>
    <string name="cancel">Refuse</string>
    <string name="noreply">No Replay</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="waitingresponse">Waiting For Your Friends Response</string>
    <string name="confirm">ConFirm</string>
    <string name="thankyouforusingwallet">Thank You For Using Raaleat Wallet Share</string>
    <string name="yourpaymentwassuccess">Your PayMent Was Successful</string>
</resources>
