<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:background="#fff7ea"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarrestaurants"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#d27520">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_80sdp"
                android:text="@string/raaleat"
                android:textColor="#ffffff"
                android:id="@+id/Name"
                android:textSize="@dimen/_16sdp"
                />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_marginTop="?attr/actionBarSize"-->
        <!--android:layout_height="match_parent">-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:id="@+id/rela"
        android:layout_alignParentBottom="true"
        android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/thankyouforusingwallet"
            android:layout_centerInParent="true"
            android:textColor="#ff7d1e"
            android:textSize="@dimen/_12sdp"

            />

    </RelativeLayout>

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/_80sdp"-->
            <!--android:background="@drawable/bcshopping"-->
            <!--android:layout_centerInParent="true">-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourpaymentwassuccess"
                android:layout_marginTop="@dimen/_60sdp"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_15sdp"
                android:textColor="#ff7d1e"
                android:id="@+id/order"
                />
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="@dimen/_30sdp"-->
                <!--android:layout_marginLeft="@dimen/_20sdp"-->
                <!--android:layout_toRightOf="@+id/order"-->
                <!--android:textColor="#000"-->
                <!--android:id="@+id/T_Order"-->
                <!--/>-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/price"-->
            <!--android:layout_marginTop="@dimen/_30sdp"-->
            <!--android:layout_below="@+id/order"-->
            <!--android:layout_marginLeft="@dimen/_40sdp"-->
            <!--android:textColor="#000"-->
            <!--android:id="@+id/price"-->
            <!--/>-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/_30sdp"-->
            <!--android:layout_marginLeft="@dimen/_20sdp"-->
            <!--android:layout_toRightOf="@+id/price"-->
            <!--android:textColor="#000"-->
            <!--android:layout_below="@+id/order"-->
            <!--android:id="@+id/T_Price"-->
            <!--/>-->
        <!--</RelativeLayout>-->

        <!--<Button-->
            <!--android:layout_width="@dimen/_150sdp"-->
            <!--android:layout_height="@dimen/_40sdp"-->
            <!--android:background="@drawable/bgbuttons"-->
            <!--android:textAllCaps="false"-->
            <!--android:id="@+id/finish"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:text="@string/skip"-->
            <!--android:layout_marginBottom="@dimen/_40sdp"-->
            <!--android:textSize="@dimen/_20sdp"-->
            <!--/>-->
    <!--</RelativeLayout>-->
</RelativeLayout>
