<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundhome"
    android:id="@+id/Home_Frame"
    tools:context=".Fragments.Home">
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_Restaurants"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/bcrestaurant">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarhome"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="#fff"
                  android:layout_marginEnd="@dimen/_27sdp"
                  android:layout_alignParentEnd="true"
                  android:id="@+id/T_Count"
                  />
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/cart"
                    android:id="@+id/Img_Cart"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>




        </android.support.v7.widget.Toolbar>





    </RelativeLayout>

    <ImageView
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/logo"
        android:id="@+id/img_logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/img_logo"
        android:text="@string/raaleat"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/T_rallet"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/T_rallet"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/welcome"
            android:textColor="#fff"
            android:id="@+id/T_welcome"
            android:textStyle="bold"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/T_welcome"
            android:text="@string/orderfood"
            android:textColor="#fff"
            android:id="@+id/T_orderfood"
            android:textStyle="bold"
            />


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="2dp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_below="@+id/T_rallet"
        card_view:cardCornerRadius="15dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/Cities_Spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:spinnerMode="dialog"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                app:backgroundTint="#e18a31">


            </android.support.v7.widget.AppCompatSpinner>



            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/States_Spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:spinnerMode="dialog"
                android:layout_below="@+id/Cities_Spinner"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                app:backgroundTint="#e18a31">


            </android.support.v7.widget.AppCompatSpinner>


            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/Type_Spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_13sdp"
                android:layout_marginRight="@dimen/_13sdp"
                android:spinnerMode="dialog"
                android:layout_below="@+id/States_Spinner"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                app:backgroundTint="#e18a31">


            </android.support.v7.widget.AppCompatSpinner>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/Type_Spinner"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:background="@drawable/bc_btnlogin"
                android:text="@string/searchnow"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:id="@+id/btn_Search"
                />

            <ProgressBar
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerInParent="true"
                android:id="@+id/progressBarRegister"
                android:visibility="invisible"
                />
        </RelativeLayout>



    </android.support.v7.widget.CardView>




    </RelativeLayout>

    </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</FrameLayout>